--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
       <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,300i,400i,500i,700|Raleway:300,400,500,600,700" rel="stylesheet">
-  	  <link rel="stylesheet" type="text/css" href="CSS/stylesheet.css">
+  	  <link rel="stylesheet" type="text/css" href="stylesheet.css">
   	  <link rel="stylesheet" type="text/css" href="CSS/reset.css">
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
